--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="/2023/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="/_app/immutable/start-6da38530.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-d8df0015.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons-7b180d14.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-bf1f8592.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths-24bb4e9c.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper-41c905a7.js">
+		<link rel="modulepreload" href="/2023/_app/immutable/start-f366da70.js">
+		<link rel="modulepreload" href="/2023/_app/immutable/chunks/index-d8df0015.js">
+		<link rel="modulepreload" href="/2023/_app/immutable/chunks/singletons-067072f3.js">
+		<link rel="modulepreload" href="/2023/_app/immutable/chunks/index-bf1f8592.js">
+		<link rel="modulepreload" href="/2023/_app/immutable/chunks/paths-fe722eca.js">
+		<link rel="modulepreload" href="/2023/_app/immutable/chunks/preload-helper-41c905a7.js">
   </head>
   <body>
     <div>
 		<script type="module" data-sveltekit-hydrate="45h">
-			import { start } from "/_app/immutable/start-6da38530.js";
+			import { start } from "/2023/_app/immutable/start-f366da70.js";
 
 			start({
-				assets: "",
+				assets: "/2023",
 				env: {},
 				target: document.querySelector('[data-sveltekit-hydrate="45h"]').parentNode,
-				version: "1712238672747"
+				version: "1712238881333"
 			});
 		</script></div>
   </body>
